<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/TRules"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="@string/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/T2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/T3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        android:layout_weight="1"
        android:layout_below="@+id/T2"/>

    <TextView
        android:id="@+id/T4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        android:layout_weight="1"
        android:layout_below="@+id/T3"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:onClick="menuButton"
            android:padding="25dp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:layout_marginRight="50dp" />

        <Button
            android:id="@+id/play_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/play"
            android:onClick="playButton"
            android:padding="25dp"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:layout_marginLeft="50dp" />

    </LinearLayout>


</LinearLayout>
