<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/playButton"
        android:onClick="playButton"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="87dp"
        />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:id="@+id/rulesButton"
        android:layout_marginTop="84dp"
        android:onClick="rulesButton"
        android:layout_below="@+id/playButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

</RelativeLayout>
