<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_play_string"
        android:id="@+id/menu_play_button"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:onClick="menuButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:id="@+id/help"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:onClick="rulesButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_string"
        android:id="@+id/pushPopButton1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        android:onClick="activateLeft"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_string"
        android:id="@+id/pushPopButton2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="activateMiddle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_string"
        android:id="@+id/pushPopButton3"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:onClick="activateRight"/>


    <com.example.billjoshua.thrules.Hanoi
        android:id="@+id/Hanoi"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="80dp" />

    <com.example.billjoshua.thrules.Temp
        android:id="@+id/Temp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp" />

</RelativeLayout>
